# check-file-age-pattern

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  check-file-age-pattern.py  pyproject.toml
.github/workflows/: ci.yml
