[tool.poetry]
name = "check-file-age-pattern"
version = "1.0.0"
description = "Check if at least a file is recent enough given path"
authors = ["Benjamin <benji81@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
bandit = "^1.7.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
lines_after_imports = 2
force_sort_within_sections = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
